# games102

./: .gitignore  README.md
hw1/: CMakeLists.txt  drawwidget.cpp  drawwidget.h  main.cpp  note.md  widget.h  widget.ui  zmath.cpp  zmath.h
hw10/: CMakeLists.txt  CMakeSettings.json  hw10.md
hw10/config/: config.h.in
hw10/include/rbf/: MarchingCube.h  RBF.h  config.h  kdtree.h  octree.h  util.h
hw10/log/: func.json  func_ldlt.json  log.txt
hw10/model/: README.md
hw10/src/: MarchingCube.cpp  RBF.cpp  kdtree.cpp  main.cpp  march_iso.cpp  octree.cpp  rbf_fit.cpp  rbf_fit_sparse.cpp  util.cpp
hw10/test/: CMakeLists.txt  test_build_kdtree.cpp  test_knn.cpp  test_normal.cpp
hw10_pcl/: CMakeLists.txt  config.h  config.h.in  poisson.cpp  rbf.cpp
hw10_pcl/model/: Arma.pcd  Kitten.pcd  Kitten_04.pcd  dragon.pcd
hw1x/: CMakeLists.txt  README.md  widget.cpp
hw3/: CMakeLists.txt  MathUtil.cpp  imgui.ini
hw4/: note4.md
hw5/hw5/: CMakeLists.txt  form.cpp  form.h  hw3form.cpp  hw3form.h  hw3form.ui  hw4form.cpp  hw4form.h  hw4form.ui  hw5form.cpp  hw5form.h  hw5form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw6/: CMakeLists.txt  main.cpp  viewer.cpp
hw7/: App.cpp  App.h  CMakeLists.txt  config.h  hw7.cpp  hw7.md
hw7/config/: config.h.in
hw8/: App.cpp  App.h  CMakeLists.txt  config.h  hw8.cpp  hw8.md
hw8/config/: config.h.in
hw9/: CMakeLists.txt  QEM.cpp  QEM.h  config.h  hw9.cpp  hw9.md
hw9/config/: config.h.in
note/: note3.md  note7.md  note8.md  note9.md
