cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_TOOLCHAIN_FILE "D:/software/vcpkg/scripts/buildsystems/vcpkg.cmake")
project(hw3 LANGUAGES CXX)
find_package(Eigen3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
add_executable(hw3 main.cpp MathUtil.cpp)
target_link_libraries(hw3 PRIVATE glad::glad glfw glm::glm imgui::imgui Eigen3::Eigen)